Fixed scrollbar bug

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -76,6 +76,7 @@ body {
   line-height: 1.5;
   transition: background-color var(--transition-speed) ease,
     color var(--transition-speed) ease;
+  overflow-x: hidden;
 }
 
 /* Typography */
